--- a/view/map.html
+++ b/view/map.html
@@ -5,11 +5,15 @@
     <title>Title</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="/css/harrisStyle.css">
 </head>
 <body>
+<h1>Harris Map</h1>
+<div id="map"></div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="keys.js"></script>
-<script src="js/mapbox-geocoder-utils.js"></script>
+<script src="../key.js"></script>
+<script src="../js/mapbox-geocoder-utils.js"></script>
+<script src="../js/harrisMap.js"></script>
 </body>
 </html>
